--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,16 @@ header a {
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
+/*navbar*/
+nav {
+    position: absolute;
+    background-color:  #ffffff;
+    width: 100%;
+    left: 0;
+    padding-left: 20px;
+    box-shadow: 20px;
+    z-index: 10;
+}
 
 h1 {
     font-family: 'oswald', sans-serif;
