--- a/styles.css
+++ b/styles.css
@@ -56,9 +56,10 @@ nav {
     background-color:  #ffffff;
     width: 100%;
     left: 0;
-    padding-left: 20px;
-    box-shadow: 20px;
+    padding: 0 1rem;
+    box-shadow: 0 2px 2px;
     z-index: 10;
+    display: none;
 }
 
 h1 {
