--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,11 @@ nav {
     box-shadow: 0 2px 2px;
     z-index: 10;
     display: none;
+    top: 100%;
+}
+
+#nav-toggle:checked~nav {
+    display: block; 
 }
 
 h1 {
