finish nav boxes

--- a/styles.css
+++ b/styles.css
@@ -63,10 +63,19 @@ nav {
     box-shadow: 0 2px 2px;
     z-index: 10;
     display: none;
+    top: 100%;
 }
 
 #nav-toggle:checked~nav {
     display: block; 
+}
+
+#nav-toggle {
+    display: none;
+}
+
+.nav-toggle-label {
+    font-size: 2rem;
 }
 
 h1 {
@@ -80,6 +89,7 @@ h1 {
 main {
     background-color: lightblue;
     flex: 1 0 auto;
+    margin-top:  47px;
 }
 
 /* Footer */
