--- a/styles.css
+++ b/styles.css
@@ -114,4 +114,18 @@ footer {
         .nav-toggle-label {
             display: none;
         }
+
+        #logo {
+            font: 280%;
+            line-height: 75px;
+            margin: 0.0.5rem;
+        }
+
+        main {
+            margin-top: 79px}
     }
+@media screen and (min-width: 992px) {
+  #menu a:hover {
+    border-bottom: 1px solid #3a3a3a;
+  }
+}
