--- a/styles.css
+++ b/styles.css
@@ -46,17 +46,18 @@ header a {
 }
 
 /* Add spacing between list items inside #menu */
-#menu > li {
+#menu>li {
     margin-bottom: 1em;
 }
 
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
+
 /*navbar*/
 nav {
     position: absolute;
-    background-color:  #ffffff;
+    background-color: #ffffff;
     width: 100%;
     left: 0;
     padding: 0 1rem;
@@ -67,7 +68,7 @@ nav {
 }
 
 #nav-toggle:checked~nav {
-    display: block; 
+    display: block;
 }
 
 #nav-toggle {
@@ -89,15 +90,26 @@ h1 {
 main {
     background-color: lightblue;
     flex: 1 0 auto;
-    margin-top:  47px;
+    margin-top: 47px;
 }
 
 /* Footer */
-footer {
-    background-color: orange;
+#social-networks {
+    text-align: center;
+    padding: 10px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
 }
 
-@media screen  and(min-width: 768px) {
+#social-networks {
+    font-size: 160%;
+    padding: 5%;
+    color: #3a3a3a;
+}
+
+@media screen and(min-width: 768px) {
+
     /* header*/
     nav {
         display: block;
@@ -106,26 +118,32 @@ footer {
         width: fit-content;
         padding-right: 1rem;
     }
+
     #menu {
         display: flex;
     }
-    #menu > li {
-        padding-left: 1rem}
-        .nav-toggle-label {
-            display: none;
-        }
 
-        #logo {
-            font: 280%;
-            line-height: 75px;
-            margin: 0.0.5rem;
-        }
-
-        main {
-            margin-top: 79px}
+    #menu>li {
+        padding-left: 1rem
     }
+
+    .nav-toggle-label {
+        display: none;
+    }
+
+    #logo {
+        font: 280%;
+        line-height: 75px;
+        margin: 0.0.5rem;
+    }
+
+    main {
+        margin-top: 79px
+    }
+}
+
 @media screen and (min-width: 992px) {
-  #menu a:hover {
-    border-bottom: 1px solid #3a3a3a;
-  }
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
+    }
 }
